need to still fix signup error size and white space

--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -1,8 +1,8 @@
 // Background Properties
 
 .back-ground, .logged-back-ground, .back-ground-session, .back-ground-photos {
-	width: 100vw;
-	height: 110vh;
+	width: 100%;
+	height: 100vh;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
