--- a/app/assets/stylesheets/components/_session_form.scss
+++ b/app/assets/stylesheets/components/_session_form.scss
@@ -2,6 +2,10 @@
 
 // Detail component
 
+.detail-bar-container {
+    z-index: 2;
+}
+
 .detail-bar {
     display: flex;
     width: auto;
@@ -14,6 +18,7 @@
     margin-top: 9px;
     margin-left: 50px;
     padding-left: 95px;
+    z-index: 2;
 }
 
 .logged-detail {
@@ -43,6 +48,7 @@
     vertical-align: middle;
     width: 100vw;
     height: 100vh;
+    z-index: 1;
 }
 
 .log-in-container, .sign-up-container {
