--- a/app/assets/stylesheets/components/_signup_form.scss
+++ b/app/assets/stylesheets/components/_signup_form.scss
@@ -3,12 +3,14 @@
 .sign-up-container {
     height: 100vh;
     width: 100vw;
+    z-index: 1;
 }
 
 .sign-up-form, .sign-up-form-err {
     margin-top: -8vh;
     height: 569px;
     width: 272px;
+    z-index: 1;
 }
 
 .sign-up-form-err {
