--- a/app/assets/stylesheets/components/_splash_content.scss
+++ b/app/assets/stylesheets/components/_splash_content.scss
@@ -42,12 +42,12 @@
 .insp-desc1, .insp-desc2 {
     text-align: center;
     color: white;
-    font-size: 23.3px;
+    font-size: 23.6px;
     width: 56%;
 }
 
 .insp-desc2 {
-    margin-top: -18px;
+    margin-top: -16px;
 }
 
 // Sign in link
@@ -55,11 +55,11 @@
 .signbtn-splash {
     padding-top: 19.5px;
     padding-bottom: 19.5px;
-    padding-left: 34px;
-    padding-right: 34px;
+    padding-left: 32.5px;
+    padding-right: 32.5px;
     text-decoration: none;
     background-color: white;
-    font-size: 22px;
+    font-size: 22.5px;
     color: black;
     font-weight: 600;
     border-radius: 3px;
@@ -108,7 +108,6 @@
     justify-content: center;
     vertical-align: middle;
     width: 100%;
-    height: 600px;
 }
 
 .welcome-tag-site {
